--- a/src/assets/styles/style.scss
+++ b/src/assets/styles/style.scss
@@ -17,7 +17,7 @@ $color-dark-blue: #717EA0;
 $color-green: #48897a;
 $color-white: #ffffff;
 
-$color-darkgreen : #f2f3f5;
+$color-darkgreen: #f2f3f5;
 
 $font-family: 'Open Sans', sans-serif;
 
@@ -145,6 +145,7 @@ p {
 
 .logo {
   max-width: 100%;
+  overflow: visible;
 
   &.orange {
     text {
@@ -164,6 +165,41 @@ p {
     circle {
       fill: $color-white;
     }
+  }
+}
+.logoWrapper{
+  position: relative;
+  .autoSaveText {
+    font-size: 12px;
+    color: $color-main2;
+    font-weight: 600;
+    position: absolute;
+    top: 32px;
+    left: 146px;
+    display: none;
+  }
+}
+.autoSave {
+  .logo {
+    circle {
+      animation-name: logoLoading;
+      animation-duration: 1s;
+      animation-iteration-count: infinite;
+      animation-direction: alternate;
+      stroke: $color-main2;
+      stroke-opacity: 0.5;
+      @keyframes logoLoading {
+        from {
+          stroke-width: 0;
+        }
+        to {
+          stroke-width: 8;
+        }
+      }
+    }
+  }
+  .autoSaveText{
+    display: block;
   }
 }
 
@@ -864,7 +900,7 @@ p {
 
     &.hidden {
       opacity: 0.2 !important;
-      pointer-events: none;
+      //pointer-events: none;
 
       text {
         opacity: 0.4 !important;
@@ -1048,7 +1084,7 @@ p {
 
   }
 
-   .graphs {
+  .graphs {
     position: absolute;
     left: 750px;
 
@@ -1057,7 +1093,7 @@ p {
       border: 0px;
       padding: 4px 20px 1px;
     }
-   }
+  }
 }
 
 #headerMini {
@@ -1278,52 +1314,129 @@ p {
   flex-direction: row;
   background: transparent radial-gradient(closest-side at 50% 50%, #F2F4FF 0%, #EFF1F9 19%, #F2F4FF 39%, #F2F2FF 67%, #F7F9FF 100%) 0% 0% no-repeat padding-box;
 
+@media screen and (max-width: 468px) {
+  overflow: scroll;
   .left {
-    width: 56.54%;
-    height: 100vh;
-    max-width: 1081px;
+    width:0%; 
 
     &.forgotPassword,
     &.signIn {
-      background-image: url("../images/sign.png");
-      background-size: cover;
-      position: relative;
-      z-index: 1;
-
-      &:before {
-        content: '';
-        position: absolute;
-        top: 0;
-        left: 0;
-        width: 100%;
-        height: 100%;
-        background: transparent linear-gradient(135deg, #5E5FBD 0%, #FE794F 100%) 0% 0% no-repeat padding-box;
-        opacity: 0.5;
-        z-index: -1;
-      }
-
-      .logo {
-        margin: 30px 70px;
-      }
-    }
-
-    &.forgotPassword {
-      background-image: url("../images/forgot-password.png");
-    }
-
-    img {
-      width: 100%;
-      height: 100%;
-      object-fit: cover;
-    }
+      background-image:none; 
+ 
+    } 
   }
-
   .right {
-    width: 43.46%;
+    width: 100%;   
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
+    overflow: scroll;
+    .authForm {
+      margin: 30px 70px 30px;
+      .submit {
+        align-self: center ;
+      }
+    }
+  } 
+  
+  .switchSignMode {
+    font-size: 20px;
+    margin-top: 80px;
+    margin: 30px 70px;
+  }
+}
+@media screen and (max-width: 368px) {
+  overflow: scroll;
+  .left {
+    width:0%; 
+
+    &.forgotPassword,
+    &.signIn {
+      background-image:none; 
+ 
+    } 
+  }
+  .right {
+    width: 100%;   
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    overflow: scroll;   
+    .authForm {
+      margin: 30px 70px;
+      .ghFormField {
+        width: 91%;
+      }
+      .submit {
+        align-self: center ;
+      }
+    }
+  } 
+  .switchSignMode {
+    font-size: 20px;
+    margin-top: 80px;
+    margin: 30px 70px;
+  }
+}
+
+  @media screen and (min-width: 768px){ 
+    .left {
+      width: 56.54%;
+      height: 100vh;
+      max-width: 1081px;
+  
+      &.forgotPassword,
+      &.signIn {
+        background-image: url("../images/sign.png");
+        background-size: cover;
+        position: relative;
+        z-index: 1;
+  
+        &:before {
+          content: '';
+          position: absolute;
+          top: 0;
+          left: 0;
+          width: 100%;
+          height: 100%;
+          background: transparent linear-gradient(135deg, #5E5FBD 0%, #FE794F 100%) 0% 0% no-repeat padding-box;
+          opacity: 0.5;
+          z-index: -1;
+        }
+  
+        .logo {
+          margin: 30px 70px;
+        }
+      }
+  
+      &.forgotPassword {
+        background-image: url("../images/forgot-password.png");
+      }
+  
+      img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    }
+    .right {
+      width: 43.46%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      
+      .submit {
+        align-self: flex-end;
+        margin-top: 32px;
+      }
+    }
+    .switchSignMode {
+      font-size: 20px;
+      margin-top: 100px;
+    }
   }
 }
 
@@ -1372,11 +1485,6 @@ p {
     text-align: right;
     align-self: flex-end;
     padding: 0 10px;
-  }
-
-  .submit {
-    align-self: flex-end;
-    margin-top: 32px;
   }
 
   .forgotPasswordText {
@@ -3905,8 +4013,6 @@ body .gh__menu {
   }
 
   &__add-comment-section {
-    margin-top: 40px;
-
     &--reply {
       margin-left: 61px;
     }
@@ -4163,6 +4269,7 @@ body .gh__menu {
   }
 
 }
+
 .graphListHeader {
   display: flex;
   justify-content: flex-start;
@@ -4537,9 +4644,9 @@ body .gh__menu {
     display: flex;
     align-items: center;
     margin-bottom: 20px;
-    color : #808080;
-    margin-left:10%;
-    margin-top:70px;
+    color: #808080;
+    margin-left: 10%;
+    margin-top: 70px;
   }
 
   &__avatar {
@@ -4571,11 +4678,12 @@ body .gh__menu {
   }
 }
 
-.graphUsersInfoOverlay{
+.graphUsersInfoOverlay {
   .graphUsersInfo {
     padding: 30px 20px 20px;
     width: 350px;
     height: 350px;
+
     .close {
       position: absolute;
     }
@@ -4601,12 +4709,12 @@ body .gh__menu {
         margin-right: 10px;
       }
 
-      .userName{
+      .userName {
         font-size: 16px;
         margin-top: 6px;
       }
 
-      .time{
+      .time {
         font-size: 15px;
         color: $color-dark-blue;
       }
@@ -4619,59 +4727,71 @@ body .gh__menu {
     }
   }
 }
+
 .mapTabButton {
   background: transparent;
   border: none;
   display: flex;
   left: 67px;
   position: absolute;
+
   img {
     width: 40px;
     height: 40px;
   }
 }
+
 .linkedin {
   padding: 3px 72px 1px 14px;
+
   .company, .institution {
     color: #181818;
     font-size: 15px;
     font-weight: 600;
     margin-bottom: 0rem !important;
   }
+
   .position, .studyType, .skills, .summary, .studyData {
     color: #181818;
     font-size: 14.5px;
     margin-bottom: 0rem !important;
   }
-  .date, .location  {
-    color: rgba(0,0,0,.6);
+
+  .date, .location {
+    color: rgba(0, 0, 0, .6);
     font-size: 13.5px;
     margin-bottom: 0rem !important;
   }
+
   .visually-hidden {
     display: none;
   }
 }
-.no-graphs {
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    height: 100%;
-    padding-top: 50px;
-    .title {
-      font-size: 4rem;
-      font-weight: 300;
-      font: normal normal 600 36px/49px Open Sans;
 
-      + .text {
-          margin: 0 0 1rem;
-      }
+.no-graphs {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+  padding-top: 50px;
+
+  .title {
+    font-size: 4rem;
+    font-weight: 300;
+    font: normal normal 600 36px/49px Open Sans;
+
+    + .text {
+      margin: 0 0 1rem;
+    }
   }
 
   .no-graphs-img {
-      font-weight: 300;
-      text-align: center;
+    font-weight: 300;
+    text-align: center;
   }
 
 }
+
+
+
